force-app/main/default/objects/AE_SE_Mappings__c/AE_SE_Mappings__c.object-meta.xml
<CustomObject>
    <label>AE/SE Mappings</label>
    <nameField>
        <label>AE/SE Mappings User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE/SE Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>