force-app/main/default/objects/AE_SE_Mappings__c/fields/Active_Primary_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Active_Primary_Mappings__c</fullName>
    <label>Active Primary Mappings</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>