force-app/main/default/objects/AE_SE_Mappings__c/fields/Backup_SE__c.field-meta.xml
<CustomField>
    <fullName>Backup_SE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup SE</label>
    <referenceTo>AE_SE_Mappings__c</referenceTo>
    <relationshipLabel>Backup Mappings</relationshipLabel>
    <relationshipName>Backup_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>