force-app/main/default/objects/AE_SE_Mappings__c/fields/Primary_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Mapping</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>Primary Mapping</relationshipLabel>
    <relationshipName>Primary_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>