force-app/main/default/objects/AE_SE_Mappings__c/recordTypes/AE_Mappings.recordType-meta.xml
<RecordType>
    <fullName>AE_Mappings</fullName>
    <active>true</active>
    <description>Lists all SEs mapped to specific AE</description>
    <label>AE Mappings</label>
</RecordType>