force-app/main/default/objects/AE_SE_Mappings__c/recordTypes/SE_Mappings.recordType-meta.xml
<RecordType>
    <fullName>SE_Mappings</fullName>
    <active>true</active>
    <description>All AEs that are mapped to one particular SE</description>
    <label>SE Mappings</label>
</RecordType>